# Instancing_OpenGL

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/shaders/: fragment.txt  vertex.txt
include/: AssetManager.h  Camera.h  Mesh.h  Renderer.h  Shader.h  ShaderStorageBuffer.h  Texture.h  Transform.h  Vertex.h  Window.h  resource.h
src/: AssetManager.cpp  Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Transform.cpp  Window.cpp  main.cpp
